--- a/cn.html
+++ b/cn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
@@ -139,11 +139,11 @@ ga('send', 'pageview');
 					<b>硕士</b> (合作项目), <a href="https://www.miun.se/en/"> 中瑞典大学 </a>,信息与通信系  2015.08-2016.06. 导师: 教授<a href="https://www.miun.se/en/personnel/tingtingzhang/"> 张婷婷 </a>.
 				</p>
 				<p>
-					<b>硕士</b>, <a href="http://english.dhu.edu.cn/">东华大学
+					<b>硕士</b>, <a href="http://www.dhu.edu.cn/">东华大学
 					</a>,计算机科学与技术学院, 2014.09-2017.03. 导师: 教授<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp">乐嘉锦</a>.
 				</p>
 				<p>
-					<b>学士</b>,  <a href="http://english.dhu.edu.cn/">东华大学
+					<b>学士</b>,  <a href="http://www.dhu.edu.cn/">东华大学
 					</a>, 计算机科学与技术学院, 2010.09-2014.06. (总绩点 3.76/5.0, 专业排名前5%)
 				</p>
 
@@ -170,7 +170,7 @@ ga('send', 'pageview');
 				</p>
 				
 				<p>
-					<b>2018.01-2018.10, 攻博资质认证</b> <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">攻博资质</a> 认证 and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">现场答辩</a> - Weiren Yu博士
+					<b>2018.01-2018.10, 攻博资质认证</b> <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">攻博资质</a> 认证和 <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">现场答辩</a> - Weiren Yu博士
 					,计算机组, 阿斯顿大学.
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
