Add clustrmaps Widget

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ $(document).ready(function(){
 });
 </script>-->
 	
+
+<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=7CEjah7rk0bN7-ol3DjK1krnE-4fGcTrRM-ScFHjw6A"></script>
+
 	
 <script>
   window.dataLayer = window.dataLayer || [];
