--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=7CEjah7rk0bN7-ol3DjK1krnE-4fGcTrRM-ScFHjw6A"></script>
-    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=7CEjah7rk0bN7-ol3DjK1krnE-4fGcTrRM-ScFHjw6A&cl=ffffff&w=a"></script>
+    <!--<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=7CEjah7rk0bN7-ol3DjK1krnE-4fGcTrRM-ScFHjw6A&cl=ffffff&w=a"></script>-->
 
     <script>
         window.dataLayer = window.dataLayer || [];
