--- a/cn.html
+++ b/cn.html
@@ -48,7 +48,6 @@ ga('send', 'pageview');
         if (localStorage.pagecount) { localStorage.pagecount = Number(localStorage.pagecount) + 1; }
         else { localStorage.pagecount = 1; } document.write("Visit times: " + localStorage.pagecount + " time(s).");
     </script>
-    <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=PpD0S0C-EjByuwz7ML_igzB_yJbjX_0qbQEDKI4Hghk"></script>
 
     <script>
         function myFunction() {
@@ -102,6 +101,7 @@ ga('send', 'pageview');
                    class="button">
                     <small>Download</small> 项目海报.pdf
                 </a>
+                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=PpD0S0C-EjByuwz7ML_igzB_yJbjX_0qbQEDKI4Hghk&cl=ffffff&w=a"></script>
             </aside>
             <section id="main-content">
                 <h3>
