--- a/index.html
+++ b/index.html
@@ -196,7 +196,16 @@
                 <p>
                     <b>2018.01-now, Research Computer Science</b> .
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-                    time series.</li>  -->
+        time series.</li>  -->
+                </p>
+
+                <p>
+                    <b>2019.20.06, <a href="https://www2.aston.ac.uk/study/postgraduate/research-programmes/three-minute-thesis/index">Aston University 3MT® Competition 2019</a></b> - 3MT® is a thesis presentation concept initially developed at The University of Queensland in 2008. <button onclick="myFunction()">Video</button>
+                    <div id="myDIV" , style="display:none;">
+                        <a href=https://youtu.be/5wL4O994VR0">
+                    </div>
+                    <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
+    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
@@ -206,28 +215,28 @@
                         <img id="Trent" src="images/Trent.jpg" alt="None picture">
                     </div>
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.01-2018.10, Qualify Report Progression</b> for <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">Qualify Report</a> Progression and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">VIVA Voce Examination</a> - Dr. Weiren Yu
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.12-2019.01, Teaching Assistant</b> for (2018-19 CS1060) Computational Reasoning and Communication - Dr. Weiren Yu
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.05-2018.07, Teaching Assistant</b> for (2017-18 CS2410) Internet Applications and Techniques - Dr. Hongxia (Helen) Wang
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
 
@@ -236,7 +245,7 @@
                     mining - Prof. Tingting Zhang, Department of Information and
                     Communication Systems, Mid Sweden University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-                    time series.</li>  -->
+        time series.</li>  -->
                 </p>
 
                 <p>
@@ -244,7 +253,7 @@
                     Jiajin Le, School of Computer Science and Technology, Donghua
                     University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
@@ -252,15 +261,15 @@
                     Programming and Practice, School of Computer Science and
                     Technology, Donghua University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Grade assignments and exams.</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
-                        experiment.</li>  -->
+        <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
+            experiment.</li>  -->
                 </p>
                 <p>
                     <b>2014.09-2015.01, Management Assistant</b> for Data Program of
                     Prof. Jiajin Le, School of Computer Science and Technology, Donghua
                     University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Manage the servers of the every
-                    laboratory.</li>  -->
+        laboratory.</li>  -->
                 </p>
                 <h3>
                     <a id="authors-and-contributors" class="anchor"
