Debug youtube video

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
                 <p>
                     <b>2019.20.06, <a href="https://www2.aston.ac.uk/study/postgraduate/research-programmes/three-minute-thesis/index">Aston University 3MT® Competition 2019</a></b> - 3MT® is a thesis presentation concept initially developed at The University of Queensland in 2008. <button onclick="myFunction1()">Video</button>
                     <div id="myDIV1" , style="display:none;">
-                        <iframe width="420" height="315"
-                                src="https://youtu.be/5wL4O994VR0"></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/5wL4O994VR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
                     diagnostic testing data.</li> -->
