Add video in cn page

--- a/cn.html
+++ b/cn.html
@@ -60,6 +60,17 @@ ga('send', 'pageview');
         }
     </script>
 
+    <script>
+        function myFunction1() {
+            var x = document.getElementById("myDIV1");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
+    </script>
+
     <a href="https://gite360.github.io/RuidongXue">English</a>
 
     <header>
@@ -166,7 +177,16 @@ ga('send', 'pageview');
                 <p>
                     <b>2018.01-至今, 计算机科学研究</b> .
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-                    time series.</li>  -->
+        time series.</li>  -->
+                </p>
+
+                <p>
+                    <b>2019.20.06, <a href="https://www2.aston.ac.uk/study/postgraduate/research-programmes/three-minute-thesis/index">阿斯顿大学 3分钟演讲竞赛2019</a></b> - 3MT® 是昆士兰大学在2018发起的时长3分钟的主题演讲. <button onclick="myFunction1()">视频</button>
+                    <div id="myDIV1" , style="display:none;">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/5wL4O994VR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
+    diagnostic testing data.</li> -->
                 </p>
 
 
@@ -182,46 +202,46 @@ ga('send', 'pageview');
                     <b>2018.01-2018.10, 攻博资质认证</b> <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">攻博资质</a> 认证和 <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">现场答辩</a> - Weiren Yu博士
                     ,计算机组, 阿斯顿大学.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.12-2019.01, 助教</b>  (2018-19 CS1060) 计算和通信原理 - Weiren Yu 博士
                     , 计算机组, 阿斯顿大学.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.05-2018.07, 助教</b>  (2017-18 CS2410) 网络应用技术 - Hongxia (Helen) Wang 博士
                     , 计算机科学组, 阿斯顿大学.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
 
                 <p>
                     <b>2015.09-2016.06, 研究生毕设项目</b> 传感器时间序列数据挖掘 - 张婷婷教授, 信息与通信系, 中瑞典大学.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-                    time series.</li>  -->
+        time series.</li>  -->
                 </p>
 
                 <p>
                     <b>2014.11-2015.08, 助研</b> 医学数据挖掘 - 乐嘉锦教授, 计算机科学与技术学院, 东华大学.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-                    diagnostic testing data.</li> -->
+        diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2015.03-2015.07, 助教</b> 面向对象程序设计与实现, 计算机科学与技术学院, 东华大学.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Grade assignments and exams.</li>
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
-                        experiment.</li>  -->
+        <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
+            experiment.</li>  -->
                 </p>
                 <p>
                     <b>2014.09-2015.01, 助研</b> 大数据项目,乐嘉锦教授, 计算机科学与技术学院, 东华大学.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Manage the servers of the every
-                    laboratory.</li>  -->
+        laboratory.</li>  -->
                 </p>
                 <h3>
                     <a id="authors-and-contributors" class="anchor"
