--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     Awards
                 </h3>
                 <p>
-                    <li> <a href="http://smartindustry4.uk/?page_id=325/">Smart Industry Workshop scholarships sponsored by the EPSRC Network Plus</a>(including registration fees(￡275), access to tea/coffee breaks, lunches,  accommodations and travel(￡200) for three days)&nbsp;2019.01</li>
+                    <li> <a href="http://smartindustry4.uk/?page_id=325/">Smart Industry Workshop scholarships sponsored by the EPSRC Network Plus</a>(including registration fees(￡275), access to tea/coffee breaks, lunches,  accommodations and travel(￡200) for three days)&nbsp;(￡475)2019.01</li>
                     <li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;2017.06</li>
                     <li>Graduated with honor: University Graduate Excellence Award of Shanghai City 2017.03</li>
                     <li>
