Change to exchange student

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </p>
 
                 <p>
-                    <b>Master</b> (Collaboration Project), Department of Information and
+                    <b>Master</b> (Exchange Student), Department of Information and
                     Communication Systems,<a href="https://www.miun.se/en/"> Mid Sweden University </a>, 2015.08-2016.06. Supervisor: Professor<a href="https://www.miun.se/en/personnel/tingtingzhang/"> Tingting Zhang </a>.
                 </p>
                 <p>
