--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-    <title>Ruidongxue by gite360</title>
+    <title>Ruidong Xue</title>
 
 </head>
 
@@ -139,24 +139,24 @@
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=7CEjah7rk0bN7-ol3DjK1krnE-4fGcTrRM-ScFHjw6A&cl=ffffff&w=a"></script>
 
             </aside>
-    <section id="main-content">
-        <h3>
-            <a id="welcome-to-github-pages" class="anchor"
-               href="#welcome-to-github-pages" aria-hidden="true">
-                <span aria-hidden="true" class="octicon octicon-link"></span>
-            </a>Publication
-        </h3>
+            <section id="main-content">
+                <h3>
+                    <a id="welcome-to-github-pages" class="anchor"
+                       href="#welcome-to-github-pages" aria-hidden="true">
+                        <span aria-hidden="true" class="octicon octicon-link"></span>
+                    </a>Publication
+                </h3>
 
-        <p>
-            Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
-            Lavassani.<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
-                <a href="http://ieeexplore.ieee.org/document/7778907/">
-                    “Sensor Time Series Association Rule Discovery Based on Modified
-                    Discretization Method”.
-                </a> The IEEE International Conference on
-                Computer Communication and the Internet,2016. <a href="https://github.com/gite360/161005MIUNProject.git">
-                    System Source Code.
-                </a>
+                <p>
+                    Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
+                    Lavassani.<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
+                    <a href="http://ieeexplore.ieee.org/document/7778907/">
+                        “Sensor Time Series Association Rule Discovery Based on Modified
+                        Discretization Method”.
+                    </a> The IEEE International Conference on
+                    Computer Communication and the Internet,2016. <a href="https://github.com/gite360/161005MIUNProject.git">
+                        System Source Code.
+                    </a>
                 </p>
 
                 <p>
@@ -178,10 +178,9 @@
                     of Engineering and Applied Science, <a href="http://www.aston.ac.uk/">Aston University </a>, 2018.01-now. Supervisor: Assistant Professor<a href="http://www.aston.ac.uk/eas/staff/a-z/dr-weiren-yu/"> Weiren Yu </a>.
                 </p>
 
-                <!--<p>
-        <b>Master</b> (Exchange Student), Department of Information and
-        Communication Systems,<a href="https://www.miun.se/en/"> Mid Sweden University </a>, 2015.08-2016.06. Supervisor: Professor<a href="https://www.miun.se/en/personnel/tingtingzhang/"> Tingting Zhang </a>.
-    </p>-->
+                <p>
+                    <b>Master</b> (Exchange Student), Department of Information and Communication Systems, <a href="https://www.miun.se/en/"> Mid Sweden University </a>, 2015.08-2016.06. Supervisor: Professor<a href="https://www.miun.se/en/personnel/tingtingzhang/"> Tingting Zhang </a>.
+                </p>
                 <p>
                     <b>Master</b>, School of Computer Science and Technology, <a href="http://english.dhu.edu.cn/">
                         Donghua
@@ -207,7 +206,7 @@
                 <p>
                     <b>2018.01-now, Research Computer Science</b> .
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-        time series.</li>  -->
+                    time series.</li>  -->
                 </p>
 
                 <p>
@@ -216,7 +215,7 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/5wL4O994VR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
@@ -226,28 +225,28 @@
                         <img id="Trent" src="images/Trent.jpg" alt="None picture">
                     </div>
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.01-2018.10, Qualify Report Progression</b> for <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">Qualify Report</a> Progression and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">VIVA Voce Examination</a> - Dr. Weiren Yu
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.12-2019.01, Teaching Assistant</b> for (2018-19 CS1060) Computational Reasoning and Communication - Dr. Weiren Yu
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
                     <b>2018.05-2018.07, Teaching Assistant</b> for (2017-18 CS2410) Internet Applications and Techniques - Dr. Hongxia (Helen) Wang
                     , Group of Computer Science, Aston University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
 
@@ -256,7 +255,7 @@
                     mining - Prof. Tingting Zhang, Department of Information and
                     Communication Systems, Mid Sweden University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
-        time series.</li>  -->
+                    time series.</li>  -->
                 </p>
 
                 <p>
@@ -264,7 +263,7 @@
                     Jiajin Le, School of Computer Science and Technology, Donghua
                     University.
                     <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
-        diagnostic testing data.</li> -->
+                    diagnostic testing data.</li> -->
                 </p>
 
                 <p>
@@ -272,15 +271,15 @@
                     Programming and Practice, School of Computer Science and
                     Technology, Donghua University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Grade assignments and exams.</li>
-        <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
-            experiment.</li>  -->
+                    <li>&nbsp;&nbsp;&nbsp;&nbsp;Help undergraduate finish the
+                        experiment.</li>  -->
                 </p>
                 <p>
                     <b>2014.09-2015.01, Management Assistant</b> for Data Program of
                     Prof. Jiajin Le, School of Computer Science and Technology, Donghua
                     University.
                     <!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Manage the servers of the every
-        laboratory.</li>  -->
+                    laboratory.</li>  -->
                 </p>
                 <h3>
                     <a id="authors-and-contributors" class="anchor"
@@ -361,10 +360,10 @@
                     <li>CET-6: 492. Reading:200, Listening:171, Comprehensive:30, Writing:91</li>
                     <li>CET-4: 559</li>
                 </p>
-                </section>
+            </section>
 
 
-</div>
+        </div>
     </div>
 
 
